Asignment 8 1st commit

--- a/assignment8.ipynb
+++ b/assignment8.ipynb
@@ -37,26 +37,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from assignment7 import KozenyCarmen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def kozeny_carmen_plot(filename, **kwargs):   \n",
-    "    \n",
+    "    data = pd.read_csv(filename)\n",
+    "    phi = data['porosity']\n",
+    "    k = data['permeability']\n",
+    "    kc = KozenyCarmen(filename)\n",
+    "    kappa0, m = kc.fit()\n",
     "    \n",
     "    fig, ax = plt.subplots(**kwargs)\n",
     "    #Add plot commands here\n",
+    "    phi_values = np.linspace(0, 0.012, 50)\n",
+    "    \n",
+    "    k_fit = kappa0 + m * (phi_values ** 3 / (1 - phi_values) ** 2)\n",
+    "    \n",
+    "    ax.scatter(phi, k, label='Data')\n",
+    "    ax.plot(phi_values, k_fit, color='red', label='Fit')\n",
+    "    ax.set_xlabel(r'$\\frac{\\phi^3}{(1-\\phi)^2}$')\n",
+    "    ax.set_ylabel(r'$k$')\n",
+    "    ax.set_title('Porosity vs Permeability')\n",
+    "    ax.legend()\n",
+    "    ax.grid(True)\n",
     "    \n",
     "    return fig"
    ]
@@ -78,27 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def contour_plot(filename, **kwargs):\n",
     "    \n",
     "    data = np.loadtxt(filename)\n",
-    "\n",
-    "    \n",
+    "    x = np.arange(0, 54 * 130.75, 130.75)  \n",
+    "    y = np.arange(0, 44 * 130.75, 130.75)  \n",
+    "    X, Y = np.meshgrid(x, y)\n",
+    "    levels = np.linspace(0.095, 0.140, 10)\n",
     "    fig, ax = plt.subplots(**kwargs)\n",
     "    #Add plot commands here\n",
-    "    \n",
-    "    return fig"
+    "    contour = ax.contourf(X, Y, data, levels=levels, cmap='viridis')\n",
+    "    cbar = plt.colorbar(contour, ax=ax)\n",
+    "    cbar.set_ticks([0.095, 0.100, 0.105, 0,110, 0.115, 0.120, 0.125, 0.130, 0.135, 0.14])\n",
+    "    ax.set_title('Porosity')\n",
+    "    ax.set_aspect('equal')\n",
+    "    ax.invert_yaxis()\n",
+    "    ax.grid(False)\n",
+    "    ax.set_xticks(np.arange(0, 7000, 1000))\n",
+    "    ax.set_yticks(np.arange(0, 6000, 1000))\n",
+    "    return fig\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:x86_64]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-x86_64-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -110,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
